[package]
name = "kukoin-example"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.2", features = ["derive", "env"] }
clap-verbosity-flag = "2.1.1"
namada_sdk = { git = "https://github.com/anoma/namada", default-features = false, features = ["std", "async-send", "download-params"] }
tendermint-config = "0.38.0" 
tendermint-rpc = { version = "0.38.0", features = ["http-client"]}
tokio = {version = "1.8.2", default-features = false}
anyhow = "1.0.95"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rand_core = "0.6.4"
reqwest = "0.11.22"
